# lihim-gui

./: README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: BaseLayout.vue  Login.vue  PasswordModal.vue  User.vue
frontend/src/utils/: axios.js
lihim_gui/: __init__.py  app.py  server.py
lihim_gui/static/: index.8cff07c0.js  index.fff513f3.css  vendor.41088fa3.js
lihim_gui/templates/: index.html
